# 0521_fastapi_backlog

./: .env.example  DB_SETUP.md  EC2_SETUP.md  alembic.ini  backlog.db  database.py  main.py  models.py  pyproject.toml  requirements.txt
data/: post_issues.sh  post_project.sh
migrations/versions/: 224cd03114a0_initial_migration_create_projects_and_.py
