[project]
name = "0521-fastapi-backlog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "python-multipart>=0.0.29",
    "uvicorn>=0.48.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "ruff>=0.15.15",
]
